=== HEAD

* Add emulated support for #ilike on MSSQL and H2 (jeremyevans)

* Add a :distinct option for all associations, which uses the SQL DISTINCT clause (jeremyevans)

* Don't require :: prefix for constant lookups in instance_evaled virtual row blocks on ruby 1.9 (jeremyevans)

=== 3.5.0 (2009-10-01)

* Correctly literalize timezones in timestamps when using Oracle (jeremyevans)

* Add class_table_inheritance plugin, supporting inheritance in the database using a table-per-model-class approach (jeremyevans)

* Allow easier overriding of model code to insert and update individual records (jeremyevans)

* Allow graphing to work on previously joined datasets, and eager graphing of models backed by joined datasets (jeremyevans)

* Fix MSSQL emulated offset support for datasets with row_procs (e.g. Model datasets) (jeremyevans)

* Support composite keys with set_primary_key when called with an array of multiple symbols (jeremyevans)

* Fix select_more and order_more to not affect receiver (tamas.denes, jeremyevans)

* Support composite keys in model associations, including many_through_many plugin support (jeremyevans)

* Add the force_encoding plugin for forcing encoding of strings for models (requires ruby 1.9) (jeremyevans)

* Support DataObjects 0.10 (previous DataObjects versions are now unsupported) (jeremyevans)

* Allow the user to specify the ADO connection string via the :conn_string option (jeremyevans)

* Add thread_local_timezones extension for allow per-thread overrides of the global timezone settings (jeremyevans)

* Add named_timezones extension for using named timezones such as "America/Los_Angeles" using TZInfo (jeremyevans)

* Pass through unsigned/elements/size and other options when altering columns on MySQL (tmm1)

* Replace Dataset#virtual_row_block_call with Sequel.virtual_row (jeremyevans)

* Allow Dataset #delete, #update, and #insert to respect existing WITH clauses on MSSQL (dlee, jeremyevans)
